# genetic-simulation

./: README.md
config/: config.ini
src/: CMakeLists.txt  Config.cpp  Config.h  ConsumableResource.cpp  ConsumableResource.h  ConsumableResourcePool.cpp  ConsumableResourcePool.h  Organism.cpp  Organism.h  Planet.cpp  Planet.h  Population.cpp  Population.h  SensoryData.cpp  SensoryData.h  Simulation.cpp  Simulation.h  main.cpp
src/engine/: CMakeLists.txt  SimulationArea.cpp  SimulationArea.h  SimulationObject.cpp  SimulationObject.h  SimulationObjectPool.h
src/genetics/: BehaviourNet.cpp  BehaviourNet.h  BehaviourNetLayer.cpp  BehaviourNetLayer.h  CMakeLists.txt  Genotype.cpp  Genotype.h  Phenotype.cpp  Phenotype.h  PhysicalTrait.cpp  PhysicalTrait.h  StandardizeParams.cpp  StandardizeParams.h  genetic_helper.h
src/helper/: CMakeLists.txt  ConcurrentQueue.h  SignalLink.cpp  SignalLink.h  benchmark_helper.cpp  benchmark_helper.h  color.cpp  color.h  numbers.cpp  numbers.h  platform.h
